syntax = "proto3";

package player;

service PlayerService {
    rpc SavePlayerData (PlayerRequest) returns (SaveResponse);
}

message PlayerRequest {
    string playerId = 1;
    Position position = 2;
    Rotation rotation = 3;
}

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Rotation {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message SaveResponse {
    bool success = 1;
}